Wed Mar 29 13:25:12 UTC 2006  Don Sharp     <Donald.Sharp@prismtech.com>

        * ace/Log_Msg.cpp:
        * include/makeinclude/platform_lynxos.GNU

          Add code to ensure cleanup in ACE_Log_Msg::close (void).
          For some systems, e.g. LynxOS, we need to ensure that
          any registered thread destructor action for this thread
          is disabled. This is a revision of an earlier attempt to
          achieve the same thing. The ACE tests pass with this edition.

        * tests/Unload_libACE.cpp
        
          This source does not use ACE functionality directly.
          It tests that the ACE shared library can be safely loaded,
          (and unloaded), by a non-ACE program exercising the
          cleanup code above.

        * tests/run_test.lst
        * tests/tests.mpc

          Build and run the new test

Wed Mar 29 07:04:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Initialise pointers with 0, small const changes

Wed Mar 29 06:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Also expand ACE_ENV_ARG_DECL_NOT_USED and
          ACE_ENV_SINGLE_ARG_DECL_NOT_USED

Tue Mar 28 21:30:01 UTC 2006  jiang,shanshan <shanshan.jiang@vanderbilt.edu>

        * ace/Log_Msg.{h,cpp}
        * ace/Log_Record.{cpp,h,inl}:
          Updated these files to solve the stack overflow problem in ACE_Log_Msg
          and ACE_Log_Record. Moves buffers that can be large in stack in malloced
          memory.
          Thanks to qwerty <qwerty0987654321 at mail dot ru> for motivating and
          suggesting the fix to this problem.

Tue Mar 28 18:34:26 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * bin/tao_other_tests.lst:
          Added a missing semicolon.

Tue Mar 28 14:51:19 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/compiler.m4:

          Added support for --disable-symbol-visibility flag so users