@@ -353,7 +353,7 @@ c       <pre>       ../configure [options]
           <code>ACE_TkReactor</code> class.</li>
         <li><code>--enable-xt-reactor</code> (no): Enable support for the
           <code>ACE_XtReactor</code> class.</li>
-        <li><code>--with-gperf</code> (yes): Build the implementation of
+        <li><code>--enable-gperf</code> (yes): Build the implementation of
           gperf that comes with ACE.</li>
         <li><code>--enable-qos</code> (no): Include the ACE_QoS library when
           building ACE.</li>
